// ============================================================
// SCHEMA: HuiApp – Hệ thống quản lý hụi & sinh nhật nhóm bạn (Single Group)
// Tech: NestJS + PostgreSQL + TypeORM
// Convention:
//   - UUID primary key (tự sinh)
//   - Soft-delete: isDeleted = true thay vì xóa vật lý
//   - Full audit trail: createdAt/createdBy, updatedAt/updatedBy
//   - Số tiền dùng decimal(18,2), đơn vị VND
// ============================================================

// ============================================================
// NHÓM 1: TÀI KHOẢN & THÀNH VIÊN
// ============================================================

// Tài khoản đăng nhập
Table Users {
  id             uuid        [pk, not null, unique]
  code           varchar(50) [unique]               // Mã định danh ngắn gọn (VD: USR-0001)
  email          varchar(255)[unique]               // Email đăng nhập
  username       varchar(100)[unique]               // Tên đăng nhập
  password       varchar(255)                       // Mật khẩu đã hash
  loginProvider  varchar(50)                        // local | google | facebook
  googleId       varchar(255)
  facebookId     varchar(255)
  isVerified     bool        [default: false]
  isAdmin        bool        [default: false]       // Hoàn (Admin) hoặc phó nhóm được phân quyền
  lastLoginAt    datetime

  isDeleted      bool        [default: false]
  createdAt      datetime    [default: `now()`]
  createdBy      uuid
  updatedAt      datetime
  updatedBy      uuid
}

// Quyền hạn cụ thể trong hệ thống
Table Permissions {
  id           uuid        [pk, not null, unique]
  code         varchar(100)[unique]               // VD: CYCLE_CREATE, MEMBER_VIEW, BIRTHDAY_CONFIG
  name         varchar(255)
  description  text
  module       varchar(50)                        // fund | member | report | birthday
  action       varchar(50)                        // create | read | update | delete

  isDeleted    bool        [default: false]
  createdAt    datetime    [default: `now()`]
  createdBy    uuid
  updatedAt    datetime
  updatedBy    uuid
}

// N-N giữa Roles và Permissions
Table RolePermissions {
  id           uuid        [pk, not null, unique]
  roleId       uuid        [ref: > Roles.id]
  permissionId uuid        [ref: > Permissions.id]

  isDeleted    bool        [default: false]
  createdAt    datetime    [default: `now()`]
  createdBy    uuid
  updatedAt    datetime
  updatedBy    uuid
}

// Vai trò trong hệ thống (ADMIN, MEMBER)
Table Roles {
  id           uuid        [pk, not null, unique]
  code         varchar(50) [unique]               // ADMIN | MEMBER
  name         varchar(100)[unique]
  description  text

  isDeleted    bool        [default: false]
  createdAt    datetime    [default: `now()`]
  createdBy    uuid
  updatedAt    datetime
  updatedBy    uuid
}

// N-N giữa Users và Roles
Table UserRoles {
  id           uuid        [pk, not null, unique]
  userId       uuid        [ref: > Users.id]
  roleId       uuid        [ref: > Roles.id]

  isDeleted    bool        [default: false]
  createdAt    datetime    [default: `now()`]
  createdBy    uuid
  updatedAt    datetime
  updatedBy    uuid
}

// Hồ sơ thành viên duy nhất của nhóm bạn
Table Members {
  id              uuid         [pk, not null, unique]
  userId          uuid         [ref: - Users.id]     // Liên kết 1-1 với tài khoản (null nếu Hoàn tự add tay profile trước)
  code            varchar(50)  [unique]              // Mã thành viên: MBR-0001 → MBR-0020
  fullName        varchar(100)
  nickname        varchar(50)                        // Biệt danh gọi trong nhóm
  birthday        date         [not null]            // Ngày sinh nhật - dùng để quét chạy CronJob tự động
  email           varchar(255) [unique]
  phone           varchar(20)                        // Số điện thoại nhận tin SMS hoặc MoMo
  zaloPhone       varchar(20)                        // Số điện thoại đăng ký Zalo
  zaloUserId      varchar(100)                       // Zalo User ID nhận tin nhắn trực tiếp qua Official Account (OA)
  momoPhone       varchar(20)
  bankName        varchar(100)
  bankAccountNo   varchar(50)
  bankAccountName varchar(100)
  qrCodeFileId    uuid         [ref: > FileArchivals.id]
  avatarFileId    uuid         [ref: > FileArchivals.id]
  orderIndex      int                                // Thứ tự danh sách trong nhóm hụi (1 -> 20)
  joinDate        date                               // Ngày tham gia nhóm hụi
  note            text
  status          varchar(20)  [default: 'active']   // active | inactive | left

  isDeleted       bool         [default: false]
  createdAt       datetime     [default: `now()`]
  createdBy       uuid
  updatedAt       datetime
  updatedBy       uuid
}


// ============================================================
// NHÓM 2: CHU KỲ HỤI (SINGLE GROUP ONLY)
// ============================================================

// Mỗi kỳ hụi (Tháng) đại diện cho vòng đóng và gom tiền của nhóm
Table Cycles {
  id                 uuid          [pk, not null, unique]
  code               varchar(50)   [unique]              // CYCLE-2026-05
  cycleIndex         int                                 // Kỳ thứ mấy (Kỳ 1, Kỳ 2...)
  name               varchar(255)                        // "Kỳ hụi tháng 5/2026"
  month              int
  year               int
  startDate          date
  deadlineDate       date                                // Hạn chót nộp tiền hụi
  payoutDate         date                                // Ngày giải ngân quỹ gom cho người nhận
  contributionAmount decimal(18,2)                       // Mức đóng cố định kỳ này (VD: 200,000.00 VND)
  totalExpected      decimal(18,2)                       // Tổng tiền cần thu = contributionAmount * tổng active members
  totalCollected     decimal(18,2) [default: 0]          // Thực tế đã thu
  totalDisbursed     decimal(18,2) [default: 0]          // Thực tế đã chi cho chủ hụi kỳ này
  receiverId         uuid          [ref: > Members.id]   // Thành viên được duyệt nhận tiền kỳ này (null nếu chưa chốt)
  status             varchar(20)   [default: 'open']     // open | collecting | ready | paid_out | cancelled
  note               text

  isDeleted          bool          [default: false]
  createdAt          datetime      [default: `now()`]
  createdBy          uuid
  updatedAt          datetime
  updatedBy          uuid
}


// ============================================================
// NHÓM 3: ĐÓNG TIỀN HỤI
// ============================================================

Table Contributions {
  id              uuid          [pk, not null, unique]
  cycleId         uuid          [ref: > Cycles.id]
  memberId        uuid          [ref: > Members.id]    // Liên kết thẳng tới Member
  requiredAmount  decimal(18,2)
  paidAmount      decimal(18,2) [default: 0]
  dueDate         date
  paidAt          datetime
  paymentMethod   varchar(30)                          // momo_auto | bank_transfer | cash
  transactionRef  varchar(255)
  proofFileId     uuid          [ref: > FileArchivals.id]
  status          varchar(20)   [default: 'pending']   // pending | paid | late | waived | overdue
  isLate          bool          [default: false]
  lateDays        int           [default: 0]
  lateFee         decimal(18,2) [default: 0]
  confirmedBy     uuid          [ref: > Users.id]
  note            text

  isDeleted       bool          [default: false]
  createdAt       datetime      [default: `now()`]
  createdBy       uuid
  updatedAt       datetime
  updatedBy       uuid
}

// Lịch sử gửi thông báo nhắc nhở đóng tiền
Table ContributionReminders {
  id             uuid        [pk, not null, unique]
  contributionId uuid        [ref: > Contributions.id]
  memberId       uuid        [ref: > Members.id]
  channel        varchar(20)                         // email | zalo | both
  message        text
  isAuto         bool        [default: true]
  status         varchar(20) [default: 'pending']
  sentAt         datetime
  failReason     text

  isDeleted      bool        [default: false]
  createdAt      datetime    [default: `now()`]
  createdBy      uuid
  updatedAt      datetime
  updatedBy      uuid
}


// ============================================================
// NHÓM 4: ĐĂNG KÝ & GIẢI NGÂN HỤI
// ============================================================

Table CycleRegistrations {
  id                  uuid          [pk, not null, unique]
  cycleId             uuid          [ref: > Cycles.id]
  memberId            uuid          [ref: > Members.id]
  code                varchar(50)   [unique]
  reason              text
  bankName            varchar(100)
  bankAccountNo       varchar(50)
  bankAccountName     varchar(100)
  qrCodeFileId        uuid          [ref: > FileArchivals.id]
  status              varchar(20)   [default: 'pending'] // pending | approved | rejected | cancelled
  isFirstTime         bool          [default: false]
  totalReceivedBefore int           [default: 0]
  reviewedBy          uuid          [ref: > Users.id]
  reviewedAt          datetime
  reviewNote          text

  isDeleted           bool          [default: false]
  createdAt           datetime      [default: `now()`]
  createdBy           uuid
  updatedAt           datetime
  updatedBy           uuid
}

Table RegistrationStatusLogs {
  id             uuid        [pk, not null, unique]
  registrationId uuid        [ref: > CycleRegistrations.id]
  fromStatus     varchar(20)
  toStatus       varchar(20)
  changedBy      uuid        [ref: > Users.id]
  note           text

  isDeleted      bool        [default: false]
  createdAt      datetime    [default: `now()`]
  createdBy      uuid
  updatedAt      datetime
  updatedBy      uuid
}

Table Disbursements {
  id              uuid          [pk, not null, unique]
  cycleId         uuid          [ref: > Cycles.id]
  registrationId  uuid          [ref: > CycleRegistrations.id]
  receiverId      uuid          [ref: > Members.id]
  amount          decimal(18,2)
  paymentMethod   varchar(30)
  transactionRef  varchar(255)
  proofFileId     uuid          [ref: > FileArchivals.id]
  bankName        varchar(100)
  bankAccountNo   varchar(50)
  bankAccountName varchar(100)
  disbursedBy     uuid          [ref: > Users.id]
  disbursedAt     datetime
  status          varchar(20)   [default: 'pending'] // pending | confirmed | disputed
  note            text

  isDeleted       bool          [default: false]
  createdAt       datetime      [default: `now()`]
  createdBy       uuid
  updatedAt       datetime
  updatedBy       uuid
}

Table DisbursementConfirmations {
  id             uuid        [pk, not null, unique]
  disbursementId uuid        [ref: > Disbursements.id]
  confirmedBy    uuid        [ref: > Members.id]
  confirmedAt    datetime
  proofFileId    uuid        [ref: > FileArchivals.id]
  note           text

  isDeleted      bool        [default: false]
  createdAt      datetime    [default: `now()`]
  createdBy      uuid
  updatedAt      datetime
  updatedBy      uuid
}


// ============================================================
// NHÓM 5: THANH TOÁN & SỔ QUỸ (SINGLE GROUP)
// ============================================================

Table MomoTransactions {
  id             uuid          [pk, not null, unique]
  contributionId uuid          [ref: > Contributions.id]
  disbursementId uuid          [ref: > Disbursements.id]
  momoOrderId    varchar(255)  [unique]
  momoRequestId  varchar(255)
  momoTransId    varchar(255)
  amount         decimal(18,2)
  direction      varchar(10)                           // in | out
  payType        varchar(30)
  requestedAt    datetime
  completedAt    datetime
  status         varchar(20)   [default: 'pending']
  resultCode     int
  resultMessage  varchar(255)
  rawResponse    text
  ipnReceivedAt  datetime

  isDeleted      bool          [default: false]
  createdAt      datetime      [default: `now()`]
  createdBy      uuid
  updatedAt      datetime
  updatedBy      uuid
}

// Sổ quỹ chi tiết dòng tiền vào ra
Table FundTransactions {
  id              uuid          [pk, not null, unique]
  cycleId         uuid          [ref: > Cycles.id]
  transactionType varchar(30)                          // contribution | disbursement | late_fee | adjustment
  direction       varchar(10)                          // in | out
  amount          decimal(18,2)
  balanceBefore   decimal(18,2)
  balanceAfter    decimal(18,2)
  relatedId       uuid                                 // Link tới Contributions.id hoặc Disbursements.id
  relatedType     varchar(50)                          // Contribution | Disbursement
  transactionDate date
  description     text
  performedBy     uuid          [ref: > Users.id]

  isDeleted       bool          [default: false]
  createdAt       datetime      [default: `now()`]
  createdBy       uuid
  updatedAt       datetime
  updatedBy       uuid
}

// ============================================================
// NHÓM 6: HỆ THỐNG THÔNG BÁO LINH ĐỘNG & TỰ ĐỘNG
// ============================================================

// Mẫu thông báo cấu hình sẵn - Hỗ trợ render động dynamic content theo từng sự kiện
Table NotificationTemplates {
  id          uuid         [pk, not null, unique]
  code        varchar(100) [unique] 
  // Định nghĩa các mã sự kiện nghiệp vụ cố định:
  // -- SINH NHẬT --
  // UPCOMING_BIRTHDAY       = Thông báo cho cả nhóm biết sắp đến sinh nhật thành viên
  // BIRTHDAY_CONGRATS       = Hệ thống chúc mừng sinh nhật trực tiếp thành viên lúc 00:00
  // -- ĐÓNG TIỀN / NẠP TIỀN --
  // CONTRIBUTION_OPENED     = Mở kỳ hụi mới, thông báo nạp tiền hàng tháng
  // CONTRIBUTION_REMIND     = Nhắc nhở nạp tiền khi sắp đến hạn chót
  // CONTRIBUTION_CONFIRMED  = Xác nhận đóng tiền hụi thành công (Hoàn đã nhận được tiền)
  // -- QUÁ HẠN --
  // CONTRIBUTION_OVERDUE   = Thông báo cảnh báo khoản nộp đã quá hạn quy định
  // -- GIẢI NGÂN HỤI --
  // DISBURSEMENT_PAIDOUT    = Thông báo đã chuyển tiền hụi cho người nhận thu quỹ kỳ này

  name        varchar(255)          // Tên hiển thị gợi nhớ (VD: "Mẫu nhắc nạp tiền hụi")
  title       varchar(255)          // Tiêu đề mẫu (VD: "[HuiApp] Nhắc đóng tiền kỳ {{cycle_name}}")
  body        text                  // Nội dung chứa placeholders (VD: "Chào {{nickname}}, số tiền cần nạp là {{amount}} trước ngày {{deadline}}.")
  channel     varchar(20)           // Kênh mặc định: email | zalo | sms | in_app | broadcast_group
  isActive    bool         [default: true] // Bật/tắt mẫu thông báo này

  isDeleted   bool         [default: false]
  createdAt   datetime     [default: `now()`]
  createdBy   uuid
  updatedAt   datetime
  updatedBy   uuid
}

// Nhật ký lưu vết và trạng thái gửi thông báo thực tế
Table Notifications {
  id                uuid        [pk, not null, unique]
  templateId        uuid        [ref: > NotificationTemplates.id, null] // null nếu là thông báo admin tự viết tay bất chợt
  
  // Đối tượng nhận thông báo
  recipientType     varchar(20) [default: 'personal'] // loại nhận: personal (cá nhân cụ thể) | group_broadcast (bắn chung cả nhóm xem)
  userId            uuid        [ref: > Users.id, null] // null nếu recipientType = 'group_broadcast'
  
  // Nội dung thực tế sau khi Backend đã compile từ template và bind data (truyền biến) vào
  title             varchar(255)
  body              text
  
  // Cấu hình kênh gửi thực tế của job đó
  channel           varchar(20)                                 // email | zalo | sms | in_app
  isRead            bool        [default: false]                // Đánh dấu trạng thái đọc (chỉ áp dụng cho in_app hoặc trên giao diện hệ thống)
  readAt            datetime    [null]
  
  // Trạng thái hàng đợi và kết quả gửi qua cổng API bên thứ 3 (Zalo OA, SMS Gateway,...)
  status            varchar(20) [default: 'pending']           // pending | processing | sent | failed
  sentAt            datetime    [null]                          // Thời điểm gửi thành công thực tế
  failReason        text        [null]                          // Nhật ký lỗi chi tiết từ API nhà mạng/Zalo nếu gửi thất bại
  
  // Hệ thống định tuyến (Routing & Deep-linking) để người dùng bấm vào thông báo là nhảy đến đúng màn hình nghiệp vụ
  relatedEntityType varchar(50)                                 // Phân loại: Member | Cycle | Contribution | Disbursement
  relatedEntityId   uuid                                        // ID chính xác của bản ghi liên quan (VD: ID của khoản Contribution bị trễ hạn)

  isDeleted         bool        [default: false]
  createdAt         datetime    [default: `now()`]
  createdBy         uuid
  updatedAt         datetime    
  updatedBy         uuid
}

// ============================================================
// NHÓM 7: HỆ THỐNG TRUY VẾT & AUDIT
// ============================================================

Table FileArchivals {
  id              uuid         [pk, not null, unique]
  fileName        varchar(255)
  fileUrl         varchar(500)
  fileType        varchar(20)
  fileSizeBytes   bigint
  extension       varchar(10)
  mimeType        varchar(100)
  moduleType      varchar(50)  // member_qr | contribution_proof | disbursement_proof | avatar
  storageProvider varchar(30)
  storagePath     varchar(500)
  uploadedBy      uuid         [ref: > Users.id]

  isDeleted       bool         [default: false]
  createdAt       datetime     [default: `now()`]
  createdBy       uuid
  updatedAt       datetime
  updatedBy       uuid
}

Table LoginLogs {
  id          uuid         [pk, not null, unique]
  userId      uuid         [ref: > Users.id]
  status      varchar(20)
  failReason  varchar(100)
  ipAddress   varchar(50)
  userAgent   varchar(500)
  deviceType  varchar(20)
  loggedInAt  datetime

  isDeleted   bool         [default: false]
  createdAt   datetime     [default: `now()`]
  createdBy   uuid
  updatedAt   datetime
  updatedBy   uuid
}

Table ActionLogs {
  id          uuid         [pk, not null, unique]
  userId      uuid         [ref: > Users.id]
  actionType  varchar(100)
  entityName  varchar(50)
  entityId    uuid
  oldValue    text
  newValue    text
  ipAddress   varchar(50)
  userAgent   varchar(500)
  description text

  isDeleted   bool         [default: false]
  createdAt   datetime     [default: `now()`]
  createdBy   uuid
  updatedAt   datetime
  updatedBy   uuid
}

// Biến cấu hình (Mở rộng thêm cấu hình liên quan đến Job Sinh Nhật)
Table SystemConfigs {
  id            uuid         [pk, not null, unique]
  key           varchar(100) [unique] // Thêm các key: 
                                      // - BIRTHDAY_REMIND_BEFORE_DAYS (Báo trước bao nhiêu ngày)
                                      // - SMS_BRANDNAME_ENABLED (Có bật sms không)
                                      // - MOMO_ENABLED...
  value         text
  dataType      varchar(20)  [default: 'string']
  description   text
  category      varchar(50)           // fund | notification | payment | birthday | security
  isPublic      bool         [default: false]
  lastChangedBy uuid         [ref: > Users.id]

  isDeleted     bool         [default: false]
  createdAt     datetime     [default: `now()`]
  createdBy     uuid
  updatedAt     datetime
  updatedBy     uuid
}